--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 
             <div class="row text-center nhigh grand-prize">
               <div class="col-md-12">
-                <a>
-                  <h3 class="service-heading">Webアプリケーションコンテスト2020冬</h3>
+                <a href="./2020/winter/entry/index.html">
+                  <h3 class="service-heading">(new!) Webアプリケーションコンテスト2020冬</h3>
                 </a>
               </div>
             </div>
 
             <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
-                <a href="https://progedu.github.io/webappcontest/2020/summer/result/">
+                <a href="./2020/summer/result/index.html">
                   <h3 class="service-heading">動くWebページコンテスト2020夏</h3>
                 </a>
               </div>
