--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </header>
 
-        <!-- 2020 -->
+        <!-- Desc -->
         <section class="bg-white page-section" id="2020">
           <div class="container">
             <div class="row">
@@ -77,8 +77,8 @@
 
             <div class="row text-center nhigh grand-prize">
               <div class="col-md-12">
-                <a href="./2020/winter/entry/index.html">
-                  <h3 class="service-heading">(new!) Webアプリケーションコンテスト2020冬</h3>
+                <a href="./2020/winter/result/index.html">
+                  <h3 class="service-heading">Webアプリケーションコンテスト2020冬</h3>
                 </a>
               </div>
             </div>
