--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="#2021">2021年度</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#2020">2020年度</a>
                 </li>
                 <li class="nav-item">
@@ -62,6 +65,27 @@
                 <h3 class="section-heading text-uppercase">『N予備校 Webアプリケーションコンテスト』は、<BR>N予備校プログラミング入門コースを学ぶ受講生向けに毎年開かれている、<BR>Webサービス開発技術研鑽のためのオンラインコンテストです。</h3>
               </div>
             </div>
+          </div>
+        </section>
+
+        <!-- 2021 -->
+        <section class="bg-light page-section" id="2021">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">2021年度</h2>
+                <h3 class="section-subheading text-muted">2021th</h3>
+              </div>
+            </div>
+
+            <div class="row text-center nhigh grand-prize mt-4">
+              <div class="col-md-12">
+                <a href="./2021/summer/entry/index.html">
+                  <h3 class="service-heading">動くWebページコンテスト2021夏 (開催中！)</h3>
+                </a>
+              </div>
+            </div>
+
           </div>
         </section>
       
