--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
             <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
-                <a href="./2021/summer/entry/index.html">
-                  <h3 class="service-heading">動くWebページコンテスト2021夏 (開催中！)</h3>
+                <a href="./2021/summer/result/index.html">
+                  <h3 class="service-heading">動くWebページコンテスト2021夏</h3>
                 </a>
               </div>
             </div>
