--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 
             <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
+                <a href="./2021/winter/entry/index.html">
+                  <h3 class="service-heading">Webアプリケーションコンテスト2021冬</h3>
+                </a>
+              </div>
+            </div>
+
+            <div class="row text-center nhigh grand-prize mt-4">
+              <div class="col-md-12">
                 <a href="./2021/summer/result/index.html">
                   <h3 class="service-heading">動くWebページコンテスト2021夏</h3>
                 </a>
@@ -101,7 +109,7 @@
 
             <div class="row text-center nhigh grand-prize">
               <div class="col-md-12">
-                <a href="./2020/winter/entry/index.html">
+                <a href="./2020/winter/result/index.html">
                   <h3 class="service-heading">Webアプリケーションコンテスト2020冬</h3>
                 </a>
               </div>
