--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <!-- Desc -->
-        <section class="bg-white page-section" id="2020">
+        <section class="bg-white page-section">
           <div class="container">
             <div class="row">
               <div class="col-lg-12 text-center">
@@ -80,7 +80,7 @@
 
             <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
-                <a href="./2021/winter/entry/index.html">
+                <a href="./2021/winter/result/index.html">
                   <h3 class="service-heading">Webアプリケーションコンテスト2021冬</h3>
                 </a>
               </div>
