--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
               </div>
             </div>
 
-            <!--div class="row text-center nhigh grand-prize mt-4">
+            <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
-                <a href="./2022/winter/result/index.html">
+                <a href="https://n-contest.web.app/2022/winter/entry/index.html">
                   <h3 class="service-heading">Webアプリケーションコンテスト2022冬</h3>
                 </a>
               </div>
-            </div -->
+            </div>
 
             <div class="row text-center nhigh grand-prize mt-4">
               <div class="col-md-12">
