--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#2023">2023年度</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#2022">2022年度</a>
           </li>
           <li class="nav-item">
@@ -89,7 +92,7 @@
       </div>
       <div class="row text-center nhigh grand-prize mt-4">
         <div class="col-md-12">
-          <a href="https://progedu.github.io/webappcontest/2023/summer/entry/index.html">
+          <a href="./2023/summer/result/index.html">
             <h3 class="service-heading">動くWebページコンテスト2023夏</h3>
           </a>
         </div>
