--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2023年度</h2>
-          <h3 class="section-subheading text-muted">2023th</h3>
+          <h3 class="section-subheading text-muted">2023rd</h3>
         </div>
       </div>
       <div class="row text-center nhigh grand-prize mt-4">
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2022年度</h2>
-          <h3 class="section-subheading text-muted">2022th</h3>
+          <h3 class="section-subheading text-muted">2022nd</h3>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2021年度</h2>
-          <h3 class="section-subheading text-muted">2021th</h3>
+          <h3 class="section-subheading text-muted">2021st</h3>
         </div>
       </div>
 
