--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2023年度</h2>
-          <h3 class="section-subheading text-muted">2023rd</h3>
+          <h3 class="section-subheading text-muted">2023</h3>
         </div>
       </div>
       <div class="row text-center nhigh grand-prize mt-4">
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2022年度</h2>
-          <h3 class="section-subheading text-muted">2022nd</h3>
+          <h3 class="section-subheading text-muted">2022</h3>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2021年度</h2>
-          <h3 class="section-subheading text-muted">2021st</h3>
+          <h3 class="section-subheading text-muted">2021</h3>
         </div>
       </div>
 
@@ -172,7 +172,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2020年度</h2>
-          <h3 class="section-subheading text-muted">2020th</h3>
+          <h3 class="section-subheading text-muted">2020</h3>
         </div>
       </div>
 
@@ -201,7 +201,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2019年度</h2>
-          <h3 class="section-subheading text-muted">2019th</h3>
+          <h3 class="section-subheading text-muted">2019</h3>
         </div>
       </div>
 
@@ -230,7 +230,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2018年度</h2>
-          <h3 class="section-subheading text-muted">2018th</h3>
+          <h3 class="section-subheading text-muted">2018</h3>
         </div>
       </div>
 
@@ -259,7 +259,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">2017年度</h2>
-          <h3 class="section-subheading text-muted">2017th</h3>
+          <h3 class="section-subheading text-muted">2017</h3>
         </div>
       </div>
 
