--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#2024">2024年度</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#2023">2023年度</a>
           </li>
           <li class="nav-item">
@@ -81,6 +84,25 @@
       </div>
     </div>
   </section>
+  <!-- 2024 -->
+  <section class="bg-light page-section" id="2024">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">2024年度</h2>
+        </div>
+      </div>
+      <div class="row text-center nhigh grand-prize mt-4">
+        <div class="col-md-12">
+          <a href="./2024/summer/entry/index.html">
+            <h3 class="service-heading">動くWebページコンテスト2024夏</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <!-- 2023 -->
   <section class="bg-light page-section" id="2023">
     <div class="container">
