--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>N予備校 Webアプリケーションコンテスト</title>
+  <title>ZEN Study Webアプリケーションコンテスト</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">N予備校 Webアプリケーションコンテスト</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">ZEN Study Webアプリケーションコンテスト</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <dev style="font-size: 3.0rem">N予備校
+        <dev style="font-size: 3.0rem">ZEN Study
       </div>
       <div class="masthead-heading text-uppercase mb-4">Webアプリケーション<BR>コンテスト</div>
     </div>
@@ -78,8 +78,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3 class="section-heading text-uppercase">『N予備校
-            Webアプリケーションコンテスト』は、<BR>N予備校プログラミング入門コースを学ぶ受講生向けに毎年開かれている、<BR>Webサービス開発技術研鑽のためのオンラインコンテストです。</h3>
+          <h3 class="section-heading text-uppercase">『ZEN Study
+            Webアプリケーションコンテスト』は、<BR>ZEN Studyプログラミング入門コースを学ぶ受講生向けに毎年開かれている、<BR>Webサービス開発技術研鑽のためのオンラインコンテストです。</h3>
         </div>
       </div>
     </div>
