--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       </div>
       <div class="row text-center nhigh grand-prize mt-4">
         <div class="col-md-12">
-          <a href="./2024/summer/entry/index.html">
+          <a href="./2024/winter/entry/index.html">
             <h3 class="service-heading">動くWebアプリコンテスト2024冬</h3>
           </a>
         </div>
-        <div class="col-md-12">
+        <div class="row text-center nhigh grand-prize mt-4">
           <a href="./2024/summer/entry/index.html">
             <h3 class="service-heading">動くWebページコンテスト2024夏</h3>
           </a>
