--- a/index.html
+++ b/index.html
@@ -84,6 +84,25 @@
       </div>
     </div>
   </section>
+  <!-- 2025 -->
+  <section class="bg-light page-section" id="2024">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">2025年度</h2>
+        </div>
+      </div>
+      <div class="row text-center nhigh grand-prize mt-4">
+        <div class="col-md-12">
+          <a href="./2025/summer/entry/index.html">
+            <h3 class="service-heading">動くWebページコンテスト2025夏</h3>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <!-- 2024 -->
   <section class="bg-light page-section" id="2024">
     <div class="container">
