コンテスト応募のお礼と応募作品数についてのページを公開

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#2025">2025年度</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#2024">2024年度</a>
           </li>
           <li class="nav-item">
@@ -85,7 +88,7 @@
     </div>
   </section>
   <!-- 2025 -->
-  <section class="bg-light page-section" id="2024">
+  <section class="bg-light page-section" id="2025">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
