--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
       </div>
       <div class="row text-center nhigh grand-prize mt-4">
         <div class="col-md-12">
+          <a href="./2025/winter/index.html">
+            <h3 class="service-heading">動くWebページコンテスト2025冬</h3>
+          </a>
+        </div>
+      </div>
+      <div class="row text-center nhigh grand-prize mt-4">
+        <div class="col-md-12">
           <a href="./2025/summer/entry/index.html">
             <h3 class="service-heading">動くWebページコンテスト2025夏</h3>
           </a>
